--- a/site.css
+++ b/site.css
@@ -10,6 +10,7 @@ body{
   font-family: monospace;
   font-size: 2em;
   min-height: 200vh;
+  background-color: floralwhite;
 }
 
 .lm-page{
@@ -40,7 +41,7 @@ body{
   border: none;
   outline: none;
   padding: 0.5%;
-  background-color: white;
+  background-color: floralwhite;
   cursor: pointer;
 }
 
@@ -56,7 +57,7 @@ body{
 
 .btn-tag {
   border: 1px solid;
-  border-radius: 20px;
+  border-radius: 15px;
   padding: 0.5%;
   background-color: white;
   cursor: pointer;
